--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,23 +21,49 @@
         android:textSize="60sp"
         android:textStyle="bold"
         android:textColor="@color/white"
-        app:layout_constraintBottom_toTopOf="@id/tv_current_operator"
+        app:layout_constraintBottom_toTopOf="@id/ll_0"
         />
 
-    <TextView
-        android:id="@+id/tv_current_operator"
-        android:layout_width="0dp"
+    <LinearLayout
+        android:id="@+id/ll_0"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        tools:text=""
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:textAlignment="textEnd"
-        android:textSize="30sp"
-        android:textStyle="bold"
-        android:textColor="@color/white"
+        android:orientation="horizontal"
         app:layout_constraintBottom_toTopOf="@id/ll_1"
         android:layout_marginBottom="24dp"
-        />
+        android:gravity="center_vertical">
+
+        <TextView
+            android:id="@+id/tv_operator"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            tools:text="+"
+            android:textAlignment="center"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:textSize="40sp"
+            android:textStyle="bold"
+            android:textColor="@color/white"
+            />
+
+        <TextView
+            android:id="@+id/tv_result"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="6"
+            tools:text=""
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:textAlignment="textEnd"
+            android:textSize="30sp"
+            android:textStyle="bold"
+            android:textColor="@color/white"
+            />
+
+    </LinearLayout>
+
+
 
     <LinearLayout
         android:id="@+id/ll_1"
@@ -51,6 +77,7 @@
         >
 
         <Button
+            android:id="@+id/btn_clear"
             android:layout_width="55dp"
             android:layout_height="80dp"
             android:layout_weight="1"
