--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -19,8 +19,10 @@
         <item name="backgroundTint">@color/primary_text</item>
         <item name="android:textSize">30sp</item>
         <item name="android:textStyle">bold</item>
-        <item name="cornerRadius">150dp</item>
+        <item name="cornerRadius">30dp</item>
         <item name="textAllCaps">false</item>
+        <item name="android:clickable">true</item>
+        <item name="android:focusable">true</item>
         <item name="android:textColor">@color/white</item>
     </style>
 
