--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -21,6 +21,7 @@
         <item name="android:textStyle">bold</item>
         <item name="cornerRadius">30dp</item>
         <item name="textAllCaps">false</item>
+        <item name="android:animateOnClick">true</item>
         <item name="android:clickable">true</item>
         <item name="android:focusable">true</item>
         <item name="android:textColor">@color/white</item>
